--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "puppeteer": "^22.0.0",
     "puppeteer-utilz": "^4.0.8",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "xlsx": "^0.18.5"
   }
 }
