Modify Scraper Functionality -- create unique ID for each scraper in preparation for enhancing for concurrent execution.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "puppeteer-utilz": "^4.0.8",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
   }
 }
